# translation_hub

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  example-standardization_guide.md  pyproject.toml  translation_hub_config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ROADMAP_V2.md
docs/developer_guide/: architecture.md  contributing.md  release_process.md  v1_design_frappe_integration.md  v2_design_frappe_integration.md
docs/user_guide/: best_practices.md  getting_started.md  review_center.md  usage.md  workspace.md
scripts/: release.py  release.sh  update_version.py
tests/: test_frappe_integration.py  test_main.py  test_pot_generation.py
tests/core/: test_orchestrator.py  test_translation_service.py
translation_hub/: __init__.py  after_install.py  cli.py  commands.py  hooks.py  import_script.py  install.py  modules.txt  populate_profile.py  setup_agent_pipeline.py  setup_agent_test.py  tasks.py  test_pot_generation.py  uninstall.py
translation_hub/api/: review_api.py
translation_hub/config/: desktop.py  translation_hub.py
translation_hub/core/: agent_orchestrator.py  config.py  database_translation.py  git_sync_service.py  maintenance.py  orchestrator.py  po_importer.py  translation_file.py  translation_service.py
translation_hub/desktop_icon/: translation_hub.json
translation_hub/fixtures/: app.json  app_glossary.json  dashboard_chart.json  translator_settings.json  workspace.json
translation_hub/locale/: es.po  es_test.po  fr.po  fr_test.po  main.pot  pt-BR.po  pt_BR.po  pt_PT.po
translation_hub/overrides/: __init__.py  boot_patches.py  desktop_icon_patches.py  file_patches.py
translation_hub/setup/: custom_translations.json  initial_data.json
translation_hub/tests/: test_ai_features.py  test_api_key_retrieval.py  test_app_glossary.py  test_app_validation.py  test_auto_compilation.py  test_automation.py  test_commands.py  test_context_injection.py  test_features_v1_2_3.py  test_feedback_loop.py  test_frappe_integration.py  test_git_sync_service.py  test_installed_app.py  test_installed_app_doctype.py  test_installed_app_search.py  test_job_queueing.py  test_monitored_apps_report.py  test_po_import.py  test_po_naming.py  test_regional_expert.py  test_review_system.py  test_standardization_guide.py  test_translation_review_fixes.py  test_translator_settings_duplicates.py  test_workspace_integration.py
translation_hub/utils/: __init__.py  cleanup.py  cleanup_test_files.py  demo_setup.py  doctype_logger.py  localization.py  (+1 more)
(+95 files in other folders)
