[project]
name = "translation_hub"
authors = [
    { name = "Sebastian Rodrigues", email = "sebstn@outlook.com.br"}
]
description = "AI agent for translating Frappe/Erpnext..."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "google-generativeai",
    "langchain-text-splitters",
    "GitPython>=3.1.0",
    "python-dotenv>=1.0.0",
    "polib>=1.2.0",
    "openai>=1.0.0",
]

[project.urls]
# Repository = "https://github.com/yourusername/translation_hub.git"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest~=8.0",
    "pytest-mock",
    # typechecking
    "mypy",
    "types-requests",
    "types-PyYAML",
]
test = [
    "coverage",
    "Faker",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
pre-commit = "~=3.6.0"
pytest = "~=8.0"
pytest-mock = "~=3.12.0"

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    "**/doctype/*/boilerplate/*.py"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "UP030", # Use implicit references for positional format fields (translations)
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call (translations)
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.mypy]
strict = false
pretty = true
incremental = true
sqlite_cache = true
files = [
    "translation_hub/core",
    "translation_hub/utils",
]
exclude = [
    "translation_hub/public",
    "translation_hub/templates",
]

[[tool.mypy.overrides]]
module = [
    "frappe.*",
    "google.generativeai.*",
    "polib.*",
    "git.*",
    "openai.*",
]
ignore_missing_imports = true
